--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,11 +1,13 @@
 default:
   image: ruby:3.2
-pages:
-  script:
-    - mkdir public
-    - cp -r * public
-  artifacts:
+deploy-pages:
+script:
+    - gem install bundler
+    - bundle install
+    - bundle exec jekyll build -d public
+pages: true  # specifies that this is a Pages job
+artifacts:
     paths:
       - public
-  only:
+only:
     - main
