--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,16 +1,16 @@
 default:
   image: ruby:3.2
 
-before_script:
-  - gem install bundler
-  - bundle install
-
 pages:
+  tags:
+    - jekyll
   script:
+    - gem install bundler
+    - bundle install
     - bundle exec jekyll build -d public
-  pages: true
   artifacts:
     paths:
       - public
   only:
-    - main  # ou "master" selon ta branche
+    - main
+
