--- a/gemfile
+++ b/gemfile
@@ -1,8 +1,7 @@
 source "https://rubygems.org"
 
 gem "jekyll"
-gem 'nokogiri'
-gem 'rack', '~> 2.2.4'
-gem 'rspec'
+gem "nokogiri"
+gem "rack", "~> 2.2.4"
+gem "rspec"
 
-bundle install
