Sauvegarde des modifs avant pull

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,17 +4,12 @@ default:
 pages:
   tags:
     - jekyll
-pages:
   script:
-    - echo "=== PATH actuel ==="
-    - echo $PATH
-    - echo "=== Ruby version ==="
-    - ruby -v
-    - echo "=== Bundler version ==="
-    - bundler -v
-    - echo "=== Contenu du Gemfile ==="
+    - echo "=== FICHIERS DANS LE REPO ==="
+    - dir
+    - echo "=== CONTENU DU FICHIER GEMFILE ==="
     - type Gemfile
-    - echo "=== Fin affichage ==="
+    - echo "=== LIGNE D'ERREUR CI-DESSOUS ==="
     - bundle install
     - bundle exec jekyll build -d public
   artifacts:
@@ -22,5 +17,7 @@ pages:
       - public
   only:
     - main
+
+
 
 
